Added Shifts By User Resource
